[package]
name = "gen3_map_ripper"
version = "0.1.0"
authors = ["Grainne Henderson <mattw2018@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "*"

[dependencies.sdl2]
version="0.30.0"
default-features=false
features=["image"]